--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- IonIcons -->
     <link rel="stylesheet" href="css/all.min.css">
-    <title>Influencer Gear</title>
+    <title>Influencer Products</title>
 
 </head>
 
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="desktop_navbar">
                 <div class="logo">
-                    <a href="#">Influencer Gears</a>
+                    <a href="#">Influencer Products</a>
                 </div>
                 <div class="menu_items">
                     <ul>
@@ -61,7 +61,8 @@
                 <div class="texts_content">
                     <h1>Start your Journey as
                         Influencer</h1>
-                    <p>Get more out of your gear with perfectly pared accessories with best quality, best price and best
+                    <p>Get more out of your products with perfectly pared accessories with best quality, best price and
+                        best
                         service.</p>
                     <a href="#" class="button">Prebook Now <i class="fas fa-arrow-right"></i>
                         </ion-icon></a>
@@ -206,7 +207,7 @@
                     </div>
                     <div class="single_grid">
                         <div class="image"><img src="images/setup.png" alt=""></div>
-                        <h3 class="product_name">Product Name</h3>
+                        <h3 class="product_name">Setup Light</h3>
                         <div class="price">$50.48</div>
                         <div class="ratings">
                             <i class="fas fa-star"></i>
@@ -225,7 +226,7 @@
                     </div>
                     <div class="single_grid">
                         <div class="image"><img src="images/tripod.png" alt=""></div>
-                        <h3 class="product_name">Product Name</h3>
+                        <h3 class="product_name">Tri Pod</h3>
                         <div class="price">$50.48</div>
                         <div class="ratings">
                             <i class="fas fa-star"></i>
@@ -244,7 +245,7 @@
                     </div>
                     <div class="single_grid">
                         <div class="image"><img src="images/action.png" alt=""></div>
-                        <h3 class="product_name">Product Name</h3>
+                        <h3 class="product_name">Action Lights</h3>
                         <div class="price">$50.48</div>
                         <div class="ratings">
                             <i class="fas fa-star"></i>
